--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.12.3",
+    "axios": "^0.26.0",
+    "js-cookie": "^3.0.1",
     "mongoose": "^6.2.2",
     "next": "12.0.10",
+    "next-connect": "^0.12.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
