--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "12.0.10",
     "next-connect": "^0.12.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-hook-form": "^7.27.1"
   },
   "devDependencies": {
     "eslint": "8.9.0",
