--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.8.1",
+    "@emotion/styled": "^11.8.1",
     "@material-ui/core": "^4.12.3",
     "axios": "^0.26.0",
     "js-cookie": "^3.0.1",
     "mongoose": "^6.2.2",
     "next": "12.0.10",
     "next-connect": "^0.12.1",
+    "notistack": "^2.0.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.27.1"
